2019-1/231/users/4203/executions/1689_1872.log
== SUBMITION (2019-05-01 22:10:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if((x==0) and (y==0)):
	print("Origem")
elif((x==0) and (y!=0)):
	print("Eixo y")
elif((y==0) and (x!=0)):
	print("Eixo x")
elif((y>0) and (x>0)):
	print("Q1")
elif((y>0) and (x<0)):
	print("Q2")
elif((y<0) and (x<0)):
	print("Q3")
elif((y<0) and (x>0)):

-- EXECUTION TIME:
0.147115
-- ERROR:
  File "/home/codebench/codes/1689/1872/main.py", line 18
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:10:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if((x==0) and (y==0)):
	print("Origem")
elif((x==0) and (y!=0)):
	print("Eixo y")
elif((y==0) and (x!=0)):
	print("Eixo x")
elif((y>0) and (x>0)):
	print("Q1")
elif((y>0) and (x<0)):
	print("Q2")
elif((y<0) and (x<0)):
	print("Q3")
elif((y<0) and (x>0)):

-- EXECUTION TIME:
0.225997
-- ERROR:
  File "/home/codebench/codes/1689/1872/main.py", line 18
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:14:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("Digite a coordenada x: "))
y=float(input("Digite a coordenada y: "))

if((x==0) and (y==0)):
	print("Origem")
elif((x==0) and (y!=0)):
	print("Eixo y")
elif((y==0) and (x!=0)):
	print("Eixo x")
elif((y>0) and (x>0)):
	print("Q1")
elif((y>0) and (x<0)):
	print("Q2")
elif((y<0) and (x<0)):
	print("Q3")
elif((y<0) and (x>0)):
-- EXECUTION TIME:
0.168578
-- ERROR:
  File "/home/codebench/codes/1689/1872/main.py", line 18
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:11:21) 
-- CODE:
x=float(input())
y=float(input())

if(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")
elif(x==0 and y!=0):
	print("Eixo Y")
elif(y==0 and x!=0):
	print("Eixo X")
else:
	print("Origem")

-- EXECUTION TIME:
0.119054
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
